---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[Wanted]: expected an equals, found eof at `4`
  ┌─ bare_number:1:2
  │
1 │ 4
  │  ^ expected an equals


error: expected an equals, found eof at `4`
 --> bare_number:1:2
  |
1 | 4
  |  ^ expected an equals
Error {
    kind: "Wanted",
    message: "expected an equals, found eof",
    span: 1..1,
    path: Some(
        "4",
    ),
}
